--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,5 @@ cache: bundler
 rvm:
 - 2.1.1
 
-install:
-  - bundle install
-
-script: bundle exec rake site:deploy --trace
+script: bundle exec jekyll build
 
