--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ cache: bundler
 rvm:
 - 2.1.1
 
-script: bundle exec jekyll build
+install:
+  - gem install jekyll bundler
+  - bundle exec jekyll build
 
