here weo go \o/

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,8 @@ install:
   - yes | gem install jekyll
   - jekyll build
 
+deploy:
+  provider: s3
+  bucket: "s3://nmcginn.com/"
+  local_dir: _site
+
