short bucket name

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 
 deploy:
   provider: s3
-  bucket: "s3://nmcginn.com/"
+  bucket: "nmcginn.com"
   skip_cleanup: true
   local_dir: _site
 
