--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ nickname: Nathan
 bio: 'A software developer, currently working in data science.'
 location: 'St. Louis'
 url: 'https://nmcginn.com'
-image: 'assets/images/casper.png'
+image: 'assets/images/doge.jpg'
 
 short_url: 'nmcginn.com/'
 google_analytics: UA-55171430-2
