move build script to node

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,8 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
-      - npm install -g showdown@1.9.1
       - npm install
   build:
     commands:
-      - scripts/build.sh
+      - scripts/build.js
       - aws s3 cp site/ s3://nmcginn.com/ --recursive
