--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "scripts/template.js",
+  "main": "scripts/build.js",
   "scripts": {
-    "start": "./scripts/template.js"
+    "start": "./scripts/build.js"
   },
   "repository": {
     "type": "git",
